# fano

./: .gitignore  CMakeLists.txt  Makefile  README.MD
include/: config.h  cons.h  core.h  editor.h  screen.h  terminal.h
src/: core.c  editor.c  fano.c  main.c  screen.c  terminal.c
